Gets rid of Rule for Text node - example to discuss